# Isi_AvaliBot

./: Dockerfile  Procfile  README.md  casher.py  config.py  database.py  enc_dec.py  ezconf.py  main.db  main.py  month_data.json  pain.py  paint.draw  procfile  pyproject.toml  requirements.txt  run.py  scrape.py  twiki.py  wiki.py
app/: __init__.py
app/home/: views.py
app/templates/: base.html
app/templates/page/: index.html  info.html  server_info.html
app/templates/page/errors/: 404.html
libs/: enc_dec.py  hook.py  pain.py  scrape.py  test.py  twiki.py  wiki.py
