[tool.poetry]
name = "repl_python3_Isi1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
config = "^0.5.0"
tell = "^0.0.1"
Cybernator = "^0.6.3"
bs4 = "^0.0.1"
Flask = "^2.0.2"
conf = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
